[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#what should I do to do git checkout ch1   
# zhushijiubusuanxiugaima
[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
